only two players can play v5

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="choice-play-with">
+        <div class="friend">Friends</div>
+        <div class="auto">Auto</div>
+    </div>
     <div class="container">
         <div class="table">
             <div class="box" data-value="1"></div>
